--- a/splash.html
+++ b/splash.html
@@ -17,18 +17,23 @@
             padding: 0%;
             margin: 0%;
             color: white;
+            -webkit-user-select: none;
+            -webkit-user-drag: none;
+            -webkit-app-region: no-drag;
+            cursor: default;
+            background-color: #242424;
         }
 
         body {
-            background-color: #242424;
+            background-color: filter: blur(15px);
         }
 
         .splash {
             padding: 5%;
         }
 
-        .authors{
-           padding-left: 5%;
+        .authors {
+            padding-left: 5%;
         }
 
         h1 {
@@ -41,16 +46,15 @@
             font-weight: 500;
         }
 
-        h3{
+        h3 {
             font-size: 1.5rem;
             font-weight: 300;
         }
 
-        h5{
+        h5 {
             font-size: 1rem;
             font-weight: 300;
         }
-
     </style>
 
     <div class="splash">
